# chess-deep-rl-cpp

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .zshrc  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  chess-rl
.devcontainer/: Dockerfile  devcontainer.json
losses/: history_2022-07-03_14-38-48.csv  history_2022-07-03_14-39-58.csv
src/: agent.cc  agent.hh  board.cc  board.hh  common.hh  common.hpp  dataset.cc  dataset.hh  environment.cc  environment.hh  game.cc  game.hh  main.cc  mapper.cc  mapper.hh  mcts.cc  mcts.hh  move.cc  move.hh  neuralnet.cc  neuralnet.hh  node.cc  node.hh  selfplay.cc  selfplay.hh  server.cc  server.hh  tqdm.h  train.cc  train.hh  types.hh  utils.cc  utils.hh
src/chess/: thc.cc  thc.hh
src/logger/: customSink.cc  customSink.hh  logger.cc  logger.hh
src/neuralNetwork/: convBlock.hh  network.hh  policyHead.hh  residualBlock.hh  valueHead.hh
src/ui/: console.cc  console.hh  mainwindow.cc  mainwindow.hh  mainwindow.ui
